--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: "3"
 
 services:
   namenode:
-    image: bde2020/hadoop-namenode:2.0.0-hadoop2.7.4-java8
+    image: bde2020/hadoop-namenode:2.0.0-hadoop3.3.1-java8
+    container_name: namenode
     volumes:
       - namenode:/hadoop/dfs/name
     environment:
@@ -12,7 +13,8 @@ services:
     ports:
       - "50070:50070"
   datanode:
-    image: bde2020/hadoop-datanode:2.0.0-hadoop2.7.4-java8
+    image: bde2020/hadoop-datanode:2.0.0-hadoop3.3.1-java8
+    container_name: datanode
     volumes:
       - datanode:/hadoop/dfs/data
     env_file:
@@ -22,7 +24,8 @@ services:
     ports:
       - "50075:50075"
   hive-server:
-    image: bde2020/hive:2.3.2-postgresql-metastore
+    image: bde2020/hive:3.1.2-postgresql-metastore
+    container_name: hive-server
     env_file:
       - ./hadoop-hive.env
     environment:
@@ -31,7 +34,8 @@ services:
     ports:
       - "10000:10000"
   hive-metastore:
-    image: bde2020/hive:2.3.2-postgresql-metastore
+    image: bde2020/hive:3.1.2-postgresql-metastore
+    container_name: hive-metastore
     env_file:
       - ./hadoop-hive.env
     command: /opt/hive/bin/hive --service metastore
@@ -40,12 +44,19 @@ services:
     ports:
       - "9083:9083"
   hive-metastore-postgresql:
-    image: bde2020/hive-metastore-postgresql:2.3.0
+    image: bde2020/hive-metastore-postgresql:3.1.0-postgresql9.6.22
+    environment: 
+      POSTGRES_PASSWORD: "password"
+    volumes: 
+      - pgdata:/var/lib/postgresql/data  
   presto-coordinator:
     image: shawnzhu/prestodb:0.181
     ports:
       - "8080:8080"
-
 volumes:
   namenode:
   datanode:
+  pgdata:
+networks:
+  default:
+    name: hivenet      
